--- a/superplayer/build.gradle
+++ b/superplayer/build.gradle
@@ -13,6 +13,10 @@ android {
         flavorDimensions "versionCode"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+        }
     }
 
     buildTypes {
